--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "three": "^0.160.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "typescript": "^5.6.2",
