--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
+    "strict": true,
+    "noImplicitAny": false,
     "target": "ES2020",
     "module": "commonjs",
     "rootDir": "src",
     "outDir": "dist",
     "esModuleInterop": true,
-    "strict": true,
     "skipLibCheck": true
   },
   "include": ["src"]
