--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "noImplicitAny": false,
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+
     "rootDir": "src",
     "outDir": "dist",
+
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]
   },
   "include": ["src"]
 }
