--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,23 @@
-app = "wesworld"
-primary_region = "iad"
+# fly.toml app configuration file generated for wesworld on 2025-11-28T01:10:34Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[env]
-  PORT = "8080"
+app = 'wesworld'
+primary_region = 'iad'
+
+[build]
 
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
-  auto_stop_machines = "stop"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-  processes = ["app"]
+  min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
